--- a/BHS.Hackathon.Starter.XFormsD365/BHS.Hackathon.Starter.XFormsD365.UWP/App.xaml
+++ b/BHS.Hackathon.Starter.XFormsD365/BHS.Hackathon.Starter.XFormsD365.UWP/App.xaml
@@ -1,8 +1,6 @@
 ﻿<Application
-    x:Class="BHS.Hackathon.Starter.XFormsD365.UWP.App"
+    x:Class="XFormsD365.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BHS.Hackathon.Starter.XFormsD365.UWP"
     RequestedTheme="Light">
-
 </Application>
