--- a/BHS.Hackathon.Starter.XFormsD365/BHS.Hackathon.Starter.XFormsD365.UWP/MainPage.xaml
+++ b/BHS.Hackathon.Starter.XFormsD365/BHS.Hackathon.Starter.XFormsD365.UWP/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<forms:WindowsPage
-    x:Class="BHS.Hackathon.Starter.XFormsD365.UWP.MainPage"
+    x:Class="XFormsD365.UWP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:forms="using:Xamarin.Forms.Platform.UWP"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,6 +10,5 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
     </Grid>
 </forms:WindowsPage>
